--- a/404.html
+++ b/404.html
@@ -1,3 +1,11 @@
 <!DOCTYPE html>
-<h1>404</h1>
+<html>
+    <head>
+        <title>404 神枪968的网站 404</title>
+        <link href="https://www.cocomanhua.com/favicon.png" rel="shortcut icon" type="image/ico">
+    </head>
+    <body>
+        <h1>404</h1>
 <h2>地址输入有误!!!</h2>
+    </body>
+</html>
