--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
-<h1>神枪968的网站 暂未制作完成 预计在2021.2.1前完成 正在学习中~</h1>
+<!DOCTYPE html>
+<!--
+
+    主框架
+
+-->
+<html>
+    <!--网页头 不会显示在网页中-->
+    <head>
+        <!--网页标题-->
+        <title>神枪968的网站</title>
+        <!--网页图标-->
+        <link href="https://www.cocomanhua.com/favicon.png" rel="shortcut icon" type="image/ico">
+    </head>
+        <!--网页显示内容(主内容)-->
+    <body>
+        <!--主内容代码-->
+        <h1><font color=green>神枪968的网站 <font color=red> 暂未制作完成 </font> 预计在2021.2.1前完成 正在学习中~</font></h1>
+    </body>
+</html>
+<!--结束-->
