--- a/404.html
+++ b/404.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>404 神枪968的网站 404</title>
-        <link href="https://www.cocomanhua.com/favicon.png" rel="shortcut icon" type="image/ico">
+        <link href="images/ico.png" rel="shortcut icon" type="image/ico">
     </head>
     <body>
         <h1>404</h1>
