--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
         <!--网页标题-->
         <title>神枪968的网站</title>
         <!--网页图标-->
-        <link href="https://www.cocomanhua.com/favicon.png" rel="shortcut icon" type="image/ico">
+        <link href="images/ico.png" rel="shortcut icon" type="image/ico">
     </head>
         <!--网页显示内容(主内容)-->
     <body>
