--- a/index.html
+++ b/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <!--
-
-    主框架
-
+主框架
 -->
 <html>
     <!--网页头 不会显示在网页中-->
     <head>
+        <!--网页编码 避免乱码-->
+        <meta charset="utf-8">
+        <meta name="keywords" content="神枪968">
         <!--网页标题-->
         <title>神枪968的网站</title>
         <!--网页图标-->
@@ -15,7 +16,9 @@
         <!--网页显示内容(主内容)-->
     <body>
         <!--主内容代码-->
-        <h1><font color=green>神枪968的网站 <font color=red> 暂未制作完成 </font> 预计在2021.2.1前完成 正在学习中~</font></h1>
+        <h1><font color=green>神枪968的网站 <font color="red" size=5> 暂未制作完成 </font> 预计在2021.3.1前完成 正在学习中~</font></h1>
+        <h2>发现html5太复杂了 要多学几个月QAQ</h2>
+        <!--size="0-7"-->
     </body>
 </html>
 <!--结束-->
