--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
     </header>
     <!-- 中 -->
     <main id="main">
-    <p title="???">神枪968的网站 暂未制作完成 预计在2021.3.1前完成 正在学习中~ 发现html5太复杂了 要多学几个月QAQ</p>
+    <p title="???">神枪968的网站 暂未制作完成 完不成了 正在学习中~ 发现html5太复杂了 要多学几个世纪QAQ</p>
+    <p>不过我整了个好玩的东西:</p>
+    <a href="baidu/">______________________________让我帮你百度一下______________________________</a>
     </main>
     <!-- 底 -->
     <footer id="bottom">
