--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html lang="zh">
 <head>
-    <meta charset="UTF-8">
+	<script src="//instant.page/5.1.0" type="module" integrity="sha384-by67kQnR+pyfy8yWP4kPO12fHKRLHZPfEsiSXR8u2IKcTdxD805MGUXBzVPnkLHw"></script>
+	<meta charset="UTF-8">
     <title>神枪968 个人主页</title>
     <link href="images/ico.png" rel="shortcut icon" type="image/ico">
     <!-- 自定义css -->
@@ -32,6 +33,8 @@
     <p title="???">神枪968的网站 暂未制作完成 完不成了 正在学习中~ 发现html5太复杂了 要多学几个世纪QAQ</p>
     <p>不过我整了个好玩的东西:</p>
     <a href="baidu/">______________________________让我帮你百度一下______________________________</a>
+	<p>
+	<a href="zha.html">____________________________________轰炸_____________________________________</a>
     </main>
     <!-- 底 -->
     <footer id="bottom">
