--- a/zha/index.html
+++ b/zha/index.html
@@ -1,7 +1,7 @@
-	<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
+<!DOCTYPE html PUBLIC "-//WAPFORUM//DTD XHTML Mobile 1.0//EN" "http://www.wapforum.org/DTD/xhtml-mobile10.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<link rel="stylesheet" href="loader.css">
+<link rel="stylesheet" href="https://shenqiang968.github.io/css/loader.css">
 <script src="https://s3.pstatp.com/cdn/expire-1-M/jquery/2.1.4/jquery.min.js"></script>
 
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
