--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <footer id="bottom">
         <div id="by">
         <!-- 1 -->
-            <div class="bottom-text">
+            <div class="bottom-text" id="rights">
             Copyright © 2021-2021 神枪968. All Rights Reserved
             </div>
         <!-- 2 -->
