--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="css/loader.css">
     <!-- times js 计算运行时间 -->
     <script src="js/times.js"></script>
+	<script src="js/rights.js"></script>
     <!-- 原 jquery.min.js 1.11.1 -->
     <script src="https://s3.pstatp.com/cdn/expire-1-M/jquery/2.1.4/jquery.min.js"></script>
 </head>
@@ -40,13 +41,13 @@
         <div id="by">
         <!-- 1 -->
             <div class="bottom-text" id="rights">
-            Copyright © 2021-2021 神枪968. All Rights Reserved
+            Copyright © 0000-9999 神枪968. All Rights Reserved
             </div>
         <!-- 2 -->
             <div class="bottom-text">
             神枪968 版权所有
             </div>
-            <div id="times" class="bottom-text-2"></div>
+            <div id="times" class="bottom-text-2">已运行:9999年0月0天0时0分0秒</div>
         </div>
     </footer>
     <!-- 结尾 -->
